@@ -91,6 +91,17 @@ java -jar client.jar server_ip socket_port user_interface rmi_server_port rmi_cl
 
 This method will take only server ip, socket port, ( "-cli" for cli, "-gui" for cli ), rmi registry port for server and client, and sets all the other param to default
 
+### toAdd in case of gui
+
+in the case the user wants to launch the program with a gui it is required to add before the parameters specified above :
+```
+java -jar --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml 
+```
+
+changing $PATH_TO_FX to the path to the javafx-sdk-11.0.2/bin folder
+
+the project has been tested on javafx-sdk-11.0.2
+
 ## Note
 
 Whatever init chosen the jar will create a json file in the same folder whit the current config, but this will be read only in the startup process, and every modification done to it will not be effective while the program is running.
@@ -106,13 +117,35 @@ The default param are:
 * min player default is 3
 * default timer is 30 sec
 
-# Persistence
-## Saved games
-Every game will be saved in the root folder where the executable jar is started, at the end of every turn, with a different ID.
+## Persistence
 
-## How to load a saved game
+### Saved games
+Every game will be saved in the root folder where the executable jar is started, at the end of every turn, with a different ID ( one id for game, every turn the saved file for a given game are overwritten with the current changes).
+
+The game will save 4 json files for game + a sheared file across all to keep the reference to all of them:
+
+for each game started in the folder will be written:
+
+* savegamesgame_id_**x**_Map.json
+* savegamesgame_id_**x**_Players.json
+* savegamesgame_id_**x**_Controller.json
+* savegamesgame_id_**x**_CurrentGame.json
+
+**x** will be the game id 
+
+there will also be a shared file:
+
+* savegames_games.json
+
+that will contain the list of the games
+
+### How to load a saved game
+
 To load a saved game, edit the StartUpServerConfig file "game" parameter with the ID of the game you wish to reload from file.
--1 is the default value to start a new game
-Once the server has started, it will wait for all the players in the saved game to reconnect by typing their name. 
+
+**-1** is the default value to start a new game
+
+Once the server has started, it will wait for at least MIN_PLAYER that were in the saved game to reconnect by typing their name. 
+
 Once every player present in the saved game has reconnected (you can read the saved names in the file: savegamesgame_Id_X_Players.json)
 the game will start again from the point it was at the time of save.
